<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Exercises"
                    android:textColor="@color/albastruMarin"
                    android:textSize="30sp"
                    android:fontFamily="@font/alfa_slab_one"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Check out the recommended exercises for each muscle group by clicking on the icons"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <ImageButton
                    android:id="@+id/btn_exercises1"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/img1"
                    android:scaleType="fitStart"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="@font/alfa_slab_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Exercises for Back"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textBack"
                        android:gravity="left"
                        android:textSize="13sp"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <ImageButton
                    android:id="@+id/btn_exercises2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/img2"
                    android:scaleType="fitStart"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="@font/alfa_slab_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Biceps Workout"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textBiceps"
                        android:gravity="left"
                        android:textSize="13sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_exercises3"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/img3"
                    android:scaleType="fitStart"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="@font/alfa_slab_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Chest and Abs"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textChest"
                        android:gravity="left"
                        android:textSize="13sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_exercises4"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/img6"
                    android:scaleType="fitStart"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="@font/alfa_slab_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cardio"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textCardio"
                        android:gravity="left"
                        android:textSize="13sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_exercises5"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/img4"
                    android:scaleType="fitStart"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="@font/alfa_slab_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Legs and glutes"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textLegs"
                        android:gravity="left"
                        android:textSize="13sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_exercises6"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/img5"
                    android:scaleType="fitStart"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="@font/alfa_slab_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Full Body Workout"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textFullBody"
                        android:gravity="left"
                        android:textSize="13sp"/>

                </LinearLayout>

            </LinearLayout>






        </LinearLayout>

    </ScrollView>

</LinearLayout>